# structrels

./: .env.sample  LICENSE  README.md  THIRD_PARTY_NOTICES  pyproject.toml
data/extended/: relations.txt
data/math/: relations.txt
data/orig/: relations.txt
hparams/gptj/: adjective_antonym.json  adjective_comparative.json  adjective_superlative.json  ambassador_of_country.json  architectural_award_received_by_an_architect.json  battle_in_history.json  bay_of_country.json  building_designed_by_an_architect.json  cabinet_minister_in_government.json  capital_city_of_country.json  cathedral_built_in_a_country.json  characteristic_gender.json  chief_justice_of_country.json  chief_of_staff_of_armed_forces.json  city_in_country.json  city_located_on_a_river.json  city_near_a_mountain_range.json  coastal_city_of_country.json  colonial_power_of_country.json  company_CEO.json  company_hq.json  country_capital_city.json  country_currency.json  country_language.json  country_largest_city.json  coup_détat_in_country.json  cultural_center_in_a_city.json  cultural_revolution_in_country.json  cultural_ritual_or_ceremony_of_country.json  deepest_lake_in_country.json  diplomatic_envoy_of_country.json  dynasty_in_country.json  economic_crisis_in_history_of_country.json  (+96 more)
scripts/: cross_eval_example.sh  sweep_example.sh  train_example.sh  train_gen_example.sh  train_gen_math_example.sh  train_gen_triangle_example.sh
structrels/: cross_eval.py  data.py  evaluation.py  main.py  make_compression_fig.py  plot.py  soft_labels.py  sweep.py  tensor_networks.py  train.py  utils.py
(+272 files in other folders)
