[project]
name = "structrels"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "relations",
    "wandb>=0.23.1",
]

[tool.uv.sources]
relations = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["structrels*"]
